--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-scroll": "^1.7.14",
+    "react-spinners": "^0.9.0",
     "react-sticky-el": "^1.1.0",
     "react-toast-notifications": "^2.2.5",
     "react-visibility-sensor": "^5.1.1",
