--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^4.2.3",
     "react-dom": "^17.0.1",
     "react-fullpage": "^0.1.19",
+    "react-hook-form": "^6.13.1",
     "react-hooks-paginator": "^0.4.0",
     "react-id-swiper": "2.4.0",
     "react-lightgallery": "0.6.3",
