--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "bootstrap": "4.5.0",
@@ -26,7 +28,7 @@
     "react-modal-video": "^1.2.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.1",
     "react-scroll": "^1.7.14",
     "react-spinners": "^0.9.0",
     "react-sticky-el": "^1.1.0",
