--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "4.5.0",
     "google-maps-react": "^2.0.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^1.0.4",
@@ -16,6 +17,7 @@
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-countdown-now": "^2.1.2",
     "react-countup": "^4.2.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-fullpage": "^0.1.19",
     "react-geocode": "^0.2.2",
@@ -23,6 +25,7 @@
     "react-hooks-paginator": "^0.4.0",
     "react-id-swiper": "2.4.0",
     "react-lightgallery": "0.6.3",
+    "react-load-script": "0.0.6",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-meta-tags": "^0.7.4",
     "react-modal-video": "^1.2.3",
