--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
   REACT_APP_PRODUCTION = false
-  REACT_APP_BASE_URL = 'http://aws-demo.shopizer.com:8080'
+  REACT_APP_BASE_URL = 'http://localhost:8080'
   REACT_APP_API_VERSION = '/api/v1/'
   REACT_APP_MERCHANT = 'DEFAULT'
+  REACT_APP_PRODUCT_GRID_LIMIT = 3
   REACT_APP_STRIPE_KEY = 'pk_test_tVMeg9oyMknGF1ZH6R35vMVc'
+  REACT_APP_MAP_API_KEY = ‘AIzaSyCJ1CJ9Ohvj1MW-6GPKro4aucA8M4665lU’ 
