--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "react-fullpage": "^0.1.19",
     "react-geocode": "^0.2.2",
     "react-hook-form": "^6.13.1",
-    "react-hooks-paginator": "^0.4.0",
     "react-id-swiper": "2.4.0",
     "react-lightgallery": "0.6.3",
     "react-load-script": "0.0.6",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-meta-tags": "^0.7.4",
     "react-modal-video": "^1.2.3",
+    "react-paginate": "^7.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
