--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "1.0.1",
     "react-breadcrumbs-dynamic": "^1.2.1",
+    "react-cookie-consent": "^6.2.1",
     "react-countdown-now": "^2.1.2",
     "react-countup": "^4.2.3",
     "react-custom-scrollbars": "^4.2.1",
