--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,10 @@ jobs:
            docker login -u shopizerecomm -p $DOCKERHUB_PASSWORD
        - run: |
            docker build . -t shopizerecomm/shopizer-shop-reactjs:latest
+       - slack/notify:
+          channel: team-nimblechapps
+          event: fail
+          template: basic_fail_1
        - run: |
            docker push shopizerecomm/shopizer-shop-reactjs:latest
 
