--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@
   REACT_APP_API_VERSION = '/api/v1/'
   REACT_APP_MERCHANT = 'DEFAULT'
   REACT_APP_PRODUCT_GRID_LIMIT = 3
-  REACT_APP_STRIPE_KEY = 'pk_test_tVMeg9oyMknGF1ZH6R35vMVc'
   REACT_APP_MAP_API_KEY = ''
+  REACT_APP_NUVEI_TERMINAL_ID =
+  REACT_APP_NUVEI_SECRET = ''
+  REACT_APP_PAYMENT_TYPE = STRIPE
+  REACT_APP_STRIPE_KEY = 'pk_test_tVMeg9oyMknGF1ZH6R35vMVc'
