--- a/package.json
+++ b/package.json
@@ -1,78 +1,79 @@
 {
-  "name": "shop-react",
-  "version": "2.0.0",
-  "private": true,
-  "dependencies": {
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
-    "animate.css": "^3.7.2",
-    "axios": "^0.21.1",
-    "bootstrap": "4.5.0",
-    "google-maps-react": "^2.0.2",
-    "js-sha512": "^0.8.0",
-    "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-app-polyfill": "^1.0.4",
-    "react-bootstrap": "1.0.1",
-    "react-breadcrumbs-dynamic": "^1.2.1",
-    "react-cookie-consent": "^6.2.1",
-    "react-countdown-now": "^2.1.2",
-    "react-countup": "^4.2.3",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.1",
-    "react-fullpage": "^0.1.19",
-    "react-geocode": "^0.2.2",
-    "react-hook-form": "^6.13.1",
-    "react-id-swiper": "2.4.0",
-    "react-idle-timer": "^4.5.2",
-    "react-lightgallery": "0.6.3",
-    "react-load-script": "0.0.6",
-    "react-mailchimp-subscribe": "^2.1.0",
-    "react-meta-tags": "^0.7.4",
-    "react-modal-video": "^1.2.3",
-    "react-paginate": "^7.0.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.1",
-    "react-scroll": "^1.7.14",
-    "react-spinners": "^0.9.0",
-    "react-star-ratings": "^2.3.0",
-    "react-sticky-el": "^1.1.0",
-    "react-toast-notifications": "^2.2.5",
-    "react-visibility-sensor": "^5.1.1",
-    "redux": "^4.0.4",
-    "redux-localstorage-simple": "^2.1.6",
-    "redux-multilanguage": "^0.1.2",
-    "redux-thunk": "^2.3.0",
-    "swiper": "^5.2.0",
-    "uuid": "^3.3.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all",
-      "ie 11"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version",
-      "ie 11"
-    ]
-  },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8",
-    "sass": "^1.29.0"
-  }
+	"name": "shop-react",
+	"version": "2.0.0",
+	"private": true,
+	"dependencies": {
+		"node-fetch": "2.6.1",
+		"@stripe/react-stripe-js": "^1.1.2",
+		"@stripe/stripe-js": "^1.11.0",
+		"animate.css": "^3.7.2",
+		"axios": "^0.21.1",
+		"bootstrap": "4.5.0",
+		"google-maps-react": "^2.0.2",
+		"js-sha512": "^0.8.0",
+		"moment": "^2.29.1",
+		"prop-types": "^15.7.2",
+		"react": "^17.0.1",
+		"react-app-polyfill": "^1.0.4",
+		"react-bootstrap": "1.0.1",
+		"react-breadcrumbs-dynamic": "^1.2.1",
+		"react-cookie-consent": "^6.2.1",
+		"react-countdown-now": "^2.1.2",
+		"react-countup": "^4.2.3",
+		"react-custom-scrollbars": "^4.2.1",
+		"react-dom": "^17.0.1",
+		"react-fullpage": "^0.1.19",
+		"react-geocode": "^0.2.2",
+		"react-hook-form": "^6.13.1",
+		"react-id-swiper": "2.4.0",
+		"react-idle-timer": "^4.5.2",
+		"react-lightgallery": "0.6.3",
+		"react-load-script": "0.0.6",
+		"react-mailchimp-subscribe": "^2.1.0",
+		"react-meta-tags": "^0.7.4",
+		"react-modal-video": "^1.2.3",
+		"react-paginate": "^7.0.0",
+		"react-redux": "^7.1.3",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "^4.0.1",
+		"react-scroll": "^1.7.14",
+		"react-spinners": "^0.9.0",
+		"react-star-ratings": "^2.3.0",
+		"react-sticky-el": "^1.1.0",
+		"react-toast-notifications": "^2.2.5",
+		"react-visibility-sensor": "^5.1.1",
+		"redux": "^4.0.4",
+		"redux-localstorage-simple": "^2.1.6",
+		"redux-multilanguage": "^0.1.2",
+		"redux-thunk": "^2.3.0",
+		"swiper": "^5.2.0",
+		"uuid": "^3.3.3"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all",
+			"ie 11"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version",
+			"ie 11"
+		]
+	},
+	"devDependencies": {
+		"redux-devtools-extension": "^2.13.8",
+		"sass": "^1.29.0"
+	}
 }
