Added new functionality "Update User Profile" & "Delete User Account".

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "2.0.0",
 	"private": true,
 	"dependencies": {
-		"node-fetch": "2.6.1",
 		"@stripe/react-stripe-js": "^1.1.2",
 		"@stripe/stripe-js": "^1.11.0",
 		"animate.css": "^3.7.2",
@@ -12,10 +11,12 @@
 		"google-maps-react": "^2.0.2",
 		"js-sha512": "^0.8.0",
 		"moment": "^2.29.1",
+		"node-fetch": "2.6.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-app-polyfill": "^1.0.4",
 		"react-bootstrap": "1.0.1",
+		"react-bootstrap-sweetalert": "^5.2.0",
 		"react-breadcrumbs-dynamic": "^1.2.1",
 		"react-cookie-consent": "^6.2.1",
 		"react-countdown-now": "^2.1.2",
