--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
   REACT_APP_PRODUCTION = false
-  REACT_APP_BASE_URL = 'http://aws-demo.shopizer.com:8080'
+  REACT_APP_BASE_URL = 'http://localhost:8080'
   REACT_APP_API_VERSION = '/api/v1/'
   REACT_APP_MERCHANT = 'DEFAULT'
   REACT_APP_PRODUCT_GRID_LIMIT = 3
-  REACT_APP_MAP_API_KEY = 'AIzaSyCotD6gx9jl8IqwT1JeizelzR25eijtGdk'
+  REACT_APP_MAP_API_KEY = ''
   REACT_APP_NUVEI_TERMINAL_ID =
   REACT_APP_NUVEI_SECRET = ''
   REACT_APP_PAYMENT_TYPE = STRIPE
