--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
        - run: |
            ls -al
        - run: |
+           rm .env.development
+       - run: |
            docker login -u shopizerecomm -p $DOCKERHUB_PASSWORD
        - run: |
            docker build . -t shopizerecomm/shopizer-shop-reactjs:latest
