--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
 workflows:
   build_and_deploy:
     jobs:
-      - deploy
+      - deploy:
           filters:
             branches:
               only:
