--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,20 +31,6 @@ jobs:
        - slack/status:
            fail_only: false
            webhook: $SLACK_SHOP_WEBHOOK
-  build_and_deploy_ecr:
-    steps:
-       - aws-ecr/build-and-push-image:
-          account-url: $AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-          aws-access-key-id: $ACCESS_KEY_ID_ENV_VAR_NAME
-          aws-secret-access-key: $SECRET_ACCESS_KEY_ENV_VAR_NAME
-          no-output-timeout: 20m
-          region: $AWS_REGION_ENV_VAR_NAME
-          repo: rufina
-          skip-when-tags-exist: false
-          tag: 'latest'
-       - slack/status:
-           fail_only: false
-           webhook: $SLACK_SHOP_WEBHOOK
 
 
 # Orchestrate our job run sequence
@@ -56,10 +42,23 @@ workflows:
             branches:
               only:
                 - main
-  build_and_deploy_ecr:
+  complete_build_and_push:
     jobs:
-      - build_and_deploy_ecr:
-          filters:
-            branches:
-              only:
-                - rufina
+       - aws-ecr/build-and-push-image:
+           account-url: $AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+           aws-access-key-id: $ACCESS_KEY_ID_ENV_VAR_NAME
+           aws-secret-access-key: $SECRET_ACCESS_KEY_ENV_VAR_NAME
+           no-output-timeout: 20m
+           region: $AWS_REGION_ENV_VAR_NAME
+           repo: rufina
+           skip-when-tags-exist: false
+           tag: 'latest'
+       - slack/status:
+           fail_only: false
+           webhook: $SLACK_SHOP_WEBHOOK
+         requires:
+            - aws-ecr/build-and-push-image
+         filters:
+           branches:
+             only:
+               - master
