--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,23 +42,25 @@ workflows:
             branches:
               only:
                 - main
-  complete_build_and_push:
+      - slack/status:
+           fail_only: false
+           webhook: $SLACK_ADMIN_WEBHOOK
+  build_and_push_image:
     jobs:
-       - aws-ecr/build-and-push-image:
-           account-url: $AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-           aws-access-key-id: $ACCESS_KEY_ID_ENV_VAR_NAME
-           aws-secret-access-key: $SECRET_ACCESS_KEY_ENV_VAR_NAME
-           no-output-timeout: 20m
-           region: $AWS_REGION_ENV_VAR_NAME
-           repo: rufina
-           skip-when-tags-exist: false
-           tag: 'latest'
-       - slack/status:
+      - aws-ecr/build-and-push-image:
+          account-url: $AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+          aws-access-key-id: $ACCESS_KEY_ID_ENV_VAR_NAME
+          aws-secret-access-key: $SECRET_ACCESS_KEY_ENV_VAR_NAME
+          no-output-timeout: 20m
+          region: $AWS_REGION_ENV_VAR_NAME
+          repo: rufina
+          skip-when-tags-exist: false
+          tag: 'latest'
+        filters:
+          branches:
+            only:
+              - rufina
+      - slack/status:
            fail_only: false
            webhook: $SLACK_SHOP_WEBHOOK
-         requires:
-            - aws-ecr/build-and-push-image
-         filters:
-           branches:
-             only:
-               - rufina
+
