--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,11 +45,11 @@ workflows:
   build_and_push_image:
     jobs:
       - aws-ecr/build-and-push-image:
-          account-url: $AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-          aws-access-key-id: $ACCESS_KEY_ID_ENV_VAR_NAME
-          aws-secret-access-key: $SECRET_ACCESS_KEY_ENV_VAR_NAME
+          account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+          aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
+          aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
           no-output-timeout: 20m
-          region: $AWS_REGION_ENV_VAR_NAME
+          region: AWS_REGION_ENV_VAR_NAME
           repo: rufina
           skip-when-tags-exist: false
           tag: 'latest'
