--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"redux-multilanguage": "^0.1.2",
 		"redux-thunk": "^2.3.0",
 		"swiper": "^5.2.0",
+		"universal-cookie": "^4.0.4",
 		"uuid": "^3.3.3"
 	},
 	"scripts": {
