theme color in var and swiper downgrade

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ APP_NUVEI_TERMINAL_ID=
 APP_NUVEI_SECRET=
 APP_PAYMENT_TYPE=STRIPE
 APP_STRIPE_KEY=pk_test_TYooMQauvdEDq54NiTphI7jx
+APP_THEME_COLOR=#D1D1D1
