--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,53 +8,72 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
-  aws-ecr: circleci/aws-ecr@7.0.0
-      
-working_directory: /tmp
+  aws-cli: circleci/aws-cli@2.0.3
 
 # Define the jobs we want to run for this project
 jobs:
-  deploy:
-    machine: true
+  build-job:
+    working_directory: ~/project
+    docker:
+      # replace with your preferred image
+      - image: node:12.8.0
     steps:
        - checkout
-       # start proprietary DB using private Docker image
-       # with credentials stored in the UI
        - run: |
            ls -al
-       - run: |
-           docker login -u shopizerecomm -p $DOCKERHUB_PASSWORD
-       - run: |
-           docker build . -t shopizerecomm/shopizer-shop-reactjs:latest
-       - run: |
-           docker push shopizerecomm/shopizer-shop-reactjs:latest
-       - slack/status:
-           fail_only: false
-           webhook: $SLACK_SHOP_WEBHOOK
+       # Restore local dependencies from cache
+       - restore_cache:
+          keys:
+            - dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
+            - dependencies-{{ .Environment.CACHE_VERSION }}
+       - run:
+            name: Install local dependencies
+            command: npm ci --silent
+       - run:
+            name: Build
+            command: npm run build
+       # Cache local dependencies if they don't exist
+       - save_cache:
+            key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
+            paths:
+                - node_modules
+       #- run:
+       #     name: Linting
+       #     command: npm run lint
+       # Cache the dist folder for the deploy job
+       - persist_to_workspace:
+          root: .
+          paths:
+            - build/*
 
+  # The deploy job
+  deploy:
+    working_directory: ~/project
+    executor: aws-cli/default
+    steps:
+      - attach_workspace:
+          at: .
+       # start proprietary DB using private Docker image
+       # with credentials stored in the UI
+      - run: |
+          ls -al
+      - aws-cli/setup:
+          profile-name: circleci
+      #TODO bucket in environment
+      - run: aws s3 sync dist s3://perfectogaz-shop/ --region ca-central-1 --delete --profile circleci
+      - slack/status:
+          fail_only: false
+          webhook: $SLACK_ADMIN_WEBHOOK
 
 # Orchestrate our job run sequence
 workflows:
   build_and_deploy:
     jobs:
+      - build-job
       - deploy:
+          requires:
+            - build-job
           filters:
-            branches:
-              only:
-                - main
-  build_and_push_image:
-    jobs:
-      - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-          aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
-          aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
-          no-output-timeout: 20m
-          region: AWS_REGION_ENV_VAR_NAME
-          repo: rufina
-          skip-when-tags-exist: false
-          tag: 'latest'
-          filters:
-            branches:
-              only:
-                - rufina
-
+              branches:
+                only:
+                  - perfecto
