--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
       - aws-cli/setup:
           profile-name: circleci
       #TODO bucket in environment
-      - run: aws s3 sync dist s3://perfectogaz-shop/ --region ca-central-1 --delete --profile circleci
+      - run: aws s3 sync build s3://perfectogaz-shop/ --region ca-central-1 --delete --profile circleci
       - slack/status:
           fail_only: false
           webhook: $SLACK_ADMIN_WEBHOOK
