--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - run: aws s3 sync build s3://perfectogaz-shop/ --region ca-central-1 --delete --profile circleci
       - slack/status:
           fail_only: false
-          webhook: $SLACK_ADMIN_WEBHOOK
+          webhook: $SLACK_SHOP_WEBHOOK
 
 # Orchestrate our job run sequence
 workflows:
