--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
        - run:
             name: Build
             command: npm run build
+      - run:
+            name: Environment config
+            command: cp env-config.js ./build
        # Cache local dependencies if they don't exist
        - save_cache:
             key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
