--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
        - run:
             name: Environment config
             command: cp env-config.js ./build
-       # Cache local dependencies if they don't exist
+       # Cache local dependencies if they don't exist - test
        - save_cache:
             key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
             paths:
