wip default lang

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ APP_NUVEI_TERMINAL_ID=
 APP_NUVEI_SECRET=
 APP_PAYMENT_TYPE=STRIPE
 APP_STRIPE_KEY=pk_test_TYooMQauvdEDq54NiTphI7jx,
-sAPP_THEME_COLOR=#7c515d
+APP_THEME_COLOR=#7c515d,
+APP_DEFAULT_LANGUAGE: "fr"
 
