--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "shop-react",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"private": true,
 	"dependencies": {
 		"@stripe/react-stripe-js": "^1.1.2",
@@ -8,12 +8,13 @@
 		"animate.css": "^3.7.2",
 		"axios": "^0.21.1",
 		"bootstrap": "4.5.0",
-		"google-maps-react": "^2.0.2",
+		"google-maps-react": "^2.0.6",
 		"js-sha512": "^0.8.0",
 		"moment": "^2.29.1",
 		"node-fetch": "2.6.1",
 		"prop-types": "^15.7.2",
-		"react": "^17.0.1",
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
 		"react-app-polyfill": "^1.0.4",
 		"react-bootstrap": "1.0.1",
 		"react-bootstrap-sweetalert": "^5.2.0",
@@ -21,8 +22,7 @@
 		"react-cookie-consent": "^6.2.1",
 		"react-countdown-now": "^2.1.2",
 		"react-countup": "^4.2.3",
-		"react-custom-scrollbars": "^4.2.1",
-		"react-dom": "^17.0.1",
+		"react-custom-scrollbars-2": "^4.4.0",
 		"react-fullpage": "^0.1.19",
 		"react-geocode": "^0.2.2",
 		"react-hook-form": "^6.13.1",
@@ -30,8 +30,7 @@
 		"react-idle-timer": "^4.5.2",
 		"react-lightgallery": "0.6.3",
 		"react-load-script": "0.0.6",
-		"react-mailchimp-subscribe": "^2.1.0",
-		"react-meta-tags": "^0.7.4",
+		"react-meta-tags": "^1.0.1",
 		"react-modal-video": "^1.2.3",
 		"react-paginate": "^7.0.0",
 		"react-redux": "^7.1.3",
@@ -53,7 +52,8 @@
 		"uuid": "^3.3.3"
 	},
 	"scripts": {
-		"dev": "chmod +x ./env.sh && ./env.sh && cp env-config.js ./public/ && react-scripts start",
+		"dev": "react-scripts start",
+		"intergartion": "chmod +x ./env.sh && ./env.sh && cp env-config.js ./public/ && react-scripts start",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
