Adjust to version 3.2.5

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 APP_PRODUCTION=false
 APP_BASE_URL=http://localhost:8080
-APP_API_VERSION=/api/v1/
+APP_API_VERSION=/api
 APP_MERCHANT=DEFAULT
-APP_PRODUCT_GRID_LIMIT=15
+APP_PRODUCT_GRID_LIMIT=40
 APP_MAP_API_KEY=
 APP_NUVEI_TERMINAL_ID=
 APP_NUVEI_SECRET=
 APP_PAYMENT_TYPE=STRIPE
 APP_STRIPE_KEY=
-APP_THEME_COLOR=#D1D1D1
+APP_THEME_COLOR=#7c515d
+APP_DEFAULT_LANGUAGE=fr
